# slashAI

./: .env.example  .gitignore  CHANGELOG.md  CLA.md  CLAUDE.md  Dockerfile.voice  LICENSE.md  NOTICE.md  Procfile  README.md  pyproject.toml  requirements.txt
.do/: app.yaml
docs/: AGENTIC_TOOLS_PLAN.md  ANALYTICS_PLAN.md  ARCHITECTURE.md  DESKTOP-PLAN.md  IMAGE_MEMORY_ISSUES.md  INCEPTION.md  MEMORY_ATTRIBUTION_PLAN.md  MEMORY_COMPARISON_MEMVID.md  MEMORY_IMAGES.md  MEMORY_MANAGEMENT_PLAN.md  MEMORY_PRIVACY.md  MEMORY_TECHSPEC.md  META_MEMORY_PLAN.md  MULTI_AGENT.md  PRD.md  REMINDERS_PLAN.md  TECHSPEC_ORIGINAL.md  VOICE_ARCHITECTURE.md
migrations/: 001_enable_pgvector.sql  002_create_memories.sql  003_create_sessions.sql  004_add_indexes.sql  005_create_build_clusters.sql  006_create_image_observations.sql  007_create_image_moderation_and_indexes.sql  008_add_deletion_log.sql  009_create_analytics.sql  010_create_scheduled_reminders.sql  011_create_user_settings.sql  012_add_hybrid_search.sql  012_link_text_memories_to_images.sql  013_add_confidence_decay.sql  014a_create_message_reactions.sql  014b_create_memory_message_links.sql  014c_add_reaction_metadata.sql  014d_update_hybrid_search_for_reactions.sql  014e_add_community_observation_type.sql  014f_add_inferred_preference_type.sql  015_add_agent_id.sql  016_add_source_platform.sql  017_backfill_agent_id.sql  018a_create_proactive_actions.sql  018b_create_inter_agent_threads.sql  018c_create_agent_reflections.sql  018d_add_proactive_importance.sql
personas/: lena.json  slashai.json
scripts/: analytics_query.py  (+8 more)
(+123 files in other folders)
