[project]
name = "slashai"
version = "0.1.0"
description = "Discord chatbot and MCP server for Claude Code integration"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only OR LicenseRef-Commercial"
license-files = ["LICENSE", "NOTICE"]
authors = [
    {name = "Slash Daemon", email = "slashdaemon@protonmail.com"}
]

classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
